--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,17 @@ body {
   left: 50%;
   transform: translateX(-50%);
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* .cdk-overlay-container {
+  width: 300px;
+  margin: auto;
+} */
