--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
-/* #page-container {
+#page-container {
   position: relative;
   min-height: 100vh;
 }
 
 #content-wrap {
-  padding-bottom: 318px;
+  padding-bottom: 296px;
 }
 
 #content {
@@ -15,5 +15,5 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 318px;
-} */
+  height: 296px;
+}
