--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-  <!-- <app-footer id="footer"></app-footer> -->
+  <app-footer id="footer"></app-footer>
 </div>
 <!-- <app-drug-search></app-drug-search> -->
