--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="">
       <img class="logo" src="../../../assets/logo.png" alt="" />
       <span class="p-2 p-lg-3 logo-word">extraDrug</span>
     </a>
@@ -13,7 +13,8 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <i class="fa-solid fa-bars"></i>
+      <i class="bi bi-list"></i>
+      <!-- <i class="fa-solid fa-bars"></i> -->
     </button>
     <div class="collapse navbar-collapse" id="main">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -32,13 +33,35 @@
           <a
             class="nav-link p-2 p-lg-3"
             aria-current="page"
+            [routerLink]="['drugReqAsReciever']"
+            [routerLinkActive]="'active'"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [hidden]="!isUserLogged"
+            >Requests As Reciever</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link p-2 p-lg-3"
+            aria-current="page"
+            [routerLink]="['drugReqAsDoner']"
+            [routerLinkActive]="'active'"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [hidden]="!isUserLogged"
+            >Requests As Doner</a
+          >
+        </li>
+        <!-- <li class="nav-item">
+          <a
+            class="nav-link p-2 p-lg-3"
+            aria-current="page"
             [routerLink]="['allUsersDrugs']"
             [routerLinkActive]="'active'"
             [routerLinkActiveOptions]="{ exact: true }"
             [hidden]="!isUserLogged"
             >All Drugs</a
           >
-        </li>
+        </li> -->
       </ul>
       <a
         class="btn rounded-pill main-btn me-3"
