--- a/src/styles.css
+++ b/src/styles.css
@@ -34,12 +34,43 @@ html,
 body {
   height: 100%;
 }
-body {
+/* body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+} */
+
+.main-heading {
+  text-align: center;
 }
 
-/* .cdk-overlay-container {
-  width: 300px;
-  margin: auto;
-} */
+.main-heading h2 {
+  font-weight: normal;
+  font-size: 40px;
+  position: relative;
+  margin-bottom: 70px;
+  text-transform: uppercase;
+}
+
+.main-heading h2::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 2px;
+  background-color: #333;
+  bottom: -30px;
+  width: 120px;
+}
+
+.main-heading h2::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 2px solid #333;
+  bottom: -38px;
+  background-color: white;
+}
