--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,6 +28,16 @@
             >My Drugs</a
           >
         </li>
+        <li>
+          <a class="nav-item p-2 p-lg-3" 
+            [routerLink]="['userProfile']"
+            [routerLinkActive]="'active'"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [hidden]="!isUserLogged "
+          >
+            <img class="logo" [src]="userProfilePicture" alt="" />
+          </a>
+        </li>
       </ul>
       <a
         class="btn rounded-pill main-btn me-3"
