--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,19 +18,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-lg-2">
-        <!-- <div class="links">
-          <h5 class="text-light">Links</h5>
-          <ul class="list-unstyled lh-lg">
-            <li><a [routerLink]="['']">Home</a></li>
-            <li>Our Services</li>
-            <li>Portfolio</li>
-            <li>Testimonials</li>
-            <li>Support</li>
-            <li>Terms and Condition</li>
-          </ul>
-        </div> -->
-      </div>
+      <div class="col-6 col-lg-2"></div>
       <div class="col-6 col-lg-2">
         <div class="links">
           <h5 class="text-light">Links</h5>
