--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,15 +29,7 @@
             >My Drugs</a
           >
         </li>
-        <li>
-          <a class="nav-item p-2 p-lg-3" 
-            [routerLink]="['userProfile']"
-            [routerLinkActive]="'active'"
-            [routerLinkActiveOptions]="{ exact: true }"
-            [hidden]="!isUserLogged "
-          >
-            <img class="logo" [src]="userProfilePicture" alt="" />
-          </a>
+
         <li class="nav-item">
           <a
             class="nav-link p-2 p-lg-3"
@@ -59,6 +51,17 @@
             [hidden]="!isUserLogged"
             >Requests As Doner</a
           >
+        </li>
+        <li>
+          <a
+            class="nav-item p-2 p-lg-3"
+            [routerLink]="['userProfile']"
+            [routerLinkActive]="'active'"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [hidden]="!isUserLogged"
+          >
+            <img class="logo" [src]="userProfilePicture" alt="" />
+          </a>
         </li>
         <!-- <li class="nav-item">
           <a
